# audio-compare

./: .gitignore  CMakeLists.txt  README.md  main.cpp  preprocessing.py
plot/: after_mainloop.dot  before_mainloop.dot  pipeline.dot
src/: AffinityPropagation.cpp  AffinityPropagation.h  Audio.cpp  Audio.h  AudioProcessor.cpp  AudioProcessor.h  AudioStreamer.cpp  AudioStreamer.h  CMakeLists.txt  MFCC.cpp  MFCC.h  preprocessing.py
src/core/: Audio.cpp  Audio.h  AudioProcessor.cpp  AudioProcessor.h  AudioStreamer.cpp  AudioStreamer.h
src/imported/: AffinityPropagation.cpp  AffinityPropagation.h  MFCC.cpp  MFCC.h
src/init/: InitProcessing.cpp  InitProcessing.h
tests/: CMakeLists.txt
tests/basic_tests/: BasicTests.cpp  CMakeLists.txt
tests/lib/googletest/: gtest.cbp
